# project-examples

./: .gitignore  .travis.yml  Jenkinsfile  README  README.md  azure-pipelines-3.yml  azure-pipelines-4.yml  azure-pipelines-5.yml  azure-pipelines-6.yml  azure-pipelines-7.yml  azure-pipelines-8.yml  azure-pipelines.yml  package.json  pom.xml  settings.xml
artifactory-client-java-examples/: README.md
artifactory-maven-plugin-example/: README.md  art-build-deploy.sh  pom.xml  settings.xml
bash-example/: deploy-file.sh  deploy-folder-by-checksum.sh  promote-build.json  promote-build.sh  promote-rpm.sh
build-info-java-example/: README  README.md  pom.xml
circleci-example/: README.md
cpp-example/: build.gradle  settings.gradle
docker-compose/: docker-compose.yaml
dotnet-examples/: README.md
drone-example/: .drone.yml  README.md
droneci-examples/: README.md
feature-branch-repo-management-with-cli-example/: README.md
github-action-example/: README.md  workflow.yml
gitlabci-example/: README.md
golang-example/: README.md  go.mod
gradle-android-aar/: README.md  build.gradle
gradle-bintray-example/: build.gradle
gradle-example/: build.gradle  gradle.properties  init.gradle
gradle-example-gradle2/: build.gradle
gradle-example-publish/: build.gradle
gradle-examples/: README.md
gradle-jcenter-resolve/: build.gradle
gradle2-example/: build.gradle
gradle2-example-publish/: build.gradle  gradle.properties
ivy-example/: build.properties  build.xml  common-configurations.xml  (+2 more)
python-example/poetry-example/: README.md  hello.py  pyproject.toml
(+810 files in other folders)
